components/15-ollama/ollama-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  annotations:
    openshift.io/display-name: "Demo - Ollama"
  labels:
    openshift.io/cluster-monitoring: 'true'
