components/15-ollama/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  ports:
  - name: http
    port: 11434       # Exposed port
    targetPort: 11434 # Matches containerPor
  selector:
    deployment: ollama
  type: ClusterIP
