components/15-ollama/ollama-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama
  namespace: ollama
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ollama
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
